# bazel-training

./: .gitignore  README.md
nextjs/: .bazelrc  BUILD.bazel  build_smoke_test.js  defs.bzl  package.json  pnpm-lock.yaml  tsconfig.json
nextjs/app/: BUILD.bazel
nextjs/public/: BUILD.bazel
stage-2/: BUILD  hello-main.cc  hello.cc
stage-3/lib/: time.cc
stage-3/main/: BUILD  greet.cc  main.cc
